--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,14 @@ button{
     color: whitesmoke;
     border: none;
     width: 70px;
+    padding: 15px;
 }
 .btn4{
     background-color: rgb(138, 138, 138);
+}
+.results{
+    background-color: white;
+}
+.div5{
+    
 }
